# PyDataExplorer

./: README.md  btn_mais_um.py  dashboard.py  filter.py  graph_view.py  group.py  main.py  main_backup_antes_filtro.py  pyproject.toml  run.py  test.ipynb  teste.ipynb
src/controller/: MainController.py  MainWindowController.py
src/model/: ClassificationModel.py  DataModel.py
src/views/: ChangeTypeView.py  ClassificationView.py  DialogChangeTypeView.py  FilterView.py  GraphView.py  HandleNullView.py  MainView.py  MapValuesView.py  classification_view.py  teste.py
src/workers/: ChangeTypeWorker.py  ClassificationWorker.py  TableUpdateWorker.py
